fix checkout and style dark mode

--- a/style.css
+++ b/style.css
@@ -10,10 +10,5 @@ Requires PHP: 7.2
 Version: 1.3
 */
 
+/*  button quick */
 
-.img-portfolio-archive{
-    width: 100%;
-    height: 300px !important;
-    padding: 20px !important;
-    border-radius: 12px !important;
-}
